Center the widget in its available space.

--- a/main/res/layout/specialdeals_appwidget.xml
+++ b/main/res/layout/specialdeals_appwidget.xml
@@ -4,9 +4,9 @@
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
-  android:layout_height="fill_parent"
+  android:layout_height="wrap_content"
   android:orientation="vertical"
-  android:background="@android:color/transparent">
+  android:layout_gravity="center">
 
   <ImageButton
     android:id="@+id/widgetHeader"
@@ -19,6 +19,7 @@
     android:id="@+id/widgetItem0"
     android:layout_width="fill_parent"
     android:layout_height="50px"
+    android:visibility="gone"
     style="@style/listItemStyle"
     android:paddingTop="1px"
     android:background="@drawable/blue_fade">
@@ -84,6 +85,7 @@
     android:layout_width="fill_parent"
     android:layout_height="50px"
     android:layout_below="@id/widgetItem0"
+    android:visibility="gone"
     style="@style/listItemStyle"
     android:background="@drawable/blue_fade">
 
@@ -148,6 +150,7 @@
     android:layout_width="fill_parent"
     android:layout_height="50px"
     android:layout_below="@id/widgetItem1"
+    android:visibility="gone"
     style="@style/listItemStyle"
     android:paddingTop="1px"
     android:background="@drawable/blue_fade">
