Set name of widget: Foursquare Friends (3x3)

--- a/main/res/xml/specialdeals_appwidget_3x3.xml
+++ b/main/res/xml/specialdeals_appwidget_3x3.xml
@@ -1,7 +1,7 @@
 <appwidget-provider
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:minWidth="220px"
-  android:minHeight="220dp"
+  android:minHeight="146px"
   android:updatePeriodMillis="900000"
   android:initialLayout="@layout/specialdeals_appwidget">
 </appwidget-provider>
