--- a/main/res/layout/friends_appwidget.xml
+++ b/main/res/layout/friends_appwidget.xml
@@ -1,220 +1,284 @@
 <?xml version="1.0" encoding="utf-8"?>
   <!-- Copyright 2009 Joe LaPenna -->
 
-<LinearLayout
+<FrameLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
-  android:layout_height="wrap_content"
-  android:orientation="vertical"
-  android:layout_gravity="center">
+  android:layout_height="wrap_content">
 
-  <ImageButton
-    android:id="@+id/widgetHeader"
+  <LinearLayout
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
-    android:src="@drawable/widget_header" />
+    android:layout_height="fill_parent"
+    android:paddingTop="38dip"
+    android:orientation="vertical">
 
-  <RelativeLayout
-    android:id="@+id/widgetItem0"
-    android:layout_width="fill_parent"
-    android:layout_height="50px"
-    android:visibility="gone"
-    style="@style/listItemStyle"
-    android:paddingTop="1px"
-    android:background="@drawable/blue_fade">
+    <RelativeLayout
+      android:id="@+id/widgetItem0"
+      android:layout_width="fill_parent"
+      android:layout_height="50dip"
+      android:visibility="gone"
+      style="@style/listItemStyle"
+      android:paddingTop="1dip"
+      android:background="@drawable/blue_fade">
 
-    <ImageView
-      android:id="@+id/photo0"
+      <ImageView
+        android:id="@+id/photo0"
 
-      android:layout_height="46px"
-      android:layout_width="46px"
-      android:padding="2px"
-      android:background="#186db5"
-      android:layout_alignParentTop="true"
-      android:layout_alignParentLeft="true"
-      android:layout_marginLeft="7dip"
-      android:layout_marginRight="8dip"
-      android:src="@drawable/blank_boy"
+        android:layout_height="46dip"
+        android:layout_width="46dip"
+        android:padding="2dip"
+        android:background="#186db5"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="7dip"
+        android:layout_marginRight="8dip"
+        android:src="@drawable/blank_boy"
 
-      android:gravity="center_vertical"
+        android:gravity="center_vertical"
 
-      android:scaleType="fitXY" />
+        android:scaleType="fitXY" />
 
-    <TextView
-      android:id="@+id/checkinMessage0"
+      <TextView
+        android:id="@+id/user0"
 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_toRightOf="@id/photo0"
+        android:layout_alignTop="@id/photo0"
+        android:layout_alignWithParentIfMissing="true"
+
+        android:gravity="left"
+        android:textAppearance="@android:style/TextAppearance.Small"
+        android:textStyle="bold"
+
+        android:maxLines="1"
+        android:ellipsize="end" />
+
+      <TextView
+        android:id="@+id/time0"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_toRightOf="@id/user0"
+        android:layout_alignParentRight="true"
+
+        android:gravity="right"
+
+        style="@style/secondaryTextStyle"
+
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end" />
+
+      <TextView
+        android:id="@+id/location0"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_below="@id/user0"
+        android:layout_toRightOf="@id/photo0"
+        android:layout_alignParentBottom="true"
+        android:layout_alignWithParentIfMissing="true"
+
+        android:gravity="right"
+
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textColor="@android:color/black"
+
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end" />
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+      android:id="@+id/widgetItem1"
+      android:layout_width="fill_parent"
+      android:layout_height="50dip"
+      android:visibility="gone"
+      style="@style/listItemStyle"
+      android:paddingTop="1dip"
+      android:background="@drawable/blue_fade">
+
+      <ImageView
+        android:id="@+id/photo1"
+
+        android:layout_height="46dip"
+        android:layout_width="46dip"
+        android:padding="2dip"
+        android:background="#186db5"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="7dip"
+        android:layout_marginRight="8dip"
+        android:src="@drawable/blank_boy"
+
+        android:gravity="center_vertical"
+
+        android:scaleType="fitXY" />
+
+      <TextView
+        android:id="@+id/user1"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_toRightOf="@id/photo1"
+        android:layout_alignTop="@id/photo1"
+        android:layout_alignWithParentIfMissing="true"
+
+        android:gravity="left"
+        android:textAppearance="@android:style/TextAppearance.Small"
+        android:textStyle="bold"
+
+        android:maxLines="1"
+        android:ellipsize="end" />
+
+      <TextView
+        android:id="@+id/time1"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_toRightOf="@id/user1"
+        android:layout_alignParentRight="true"
+
+        android:gravity="right"
+
+        style="@style/secondaryTextStyle"
+
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end" />
+
+      <TextView
+        android:id="@+id/location1"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_below="@id/user1"
+        android:layout_toRightOf="@id/photo1"
+        android:layout_alignParentBottom="true"
+        android:layout_alignWithParentIfMissing="true"
+
+        android:gravity="right"
+
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textColor="@android:color/black"
+
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end" />
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+      android:id="@+id/widgetItem2"
+      android:layout_width="fill_parent"
+      android:layout_height="50dip"
+      android:visibility="gone"
+      style="@style/listItemStyle"
+      android:paddingTop="1dip"
+      android:background="@drawable/blue_fade">
+
+      <ImageView
+        android:id="@+id/photo2"
+
+        android:layout_height="46dip"
+        android:layout_width="46dip"
+        android:padding="2dip"
+        android:background="#186db5"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="7dip"
+        android:layout_marginRight="8dip"
+        android:src="@drawable/blank_boy"
+
+        android:gravity="center_vertical"
+
+        android:scaleType="fitXY" />
+
+      <TextView
+        android:id="@+id/user2"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_toRightOf="@id/photo2"
+        android:layout_alignTop="@id/photo2"
+        android:layout_alignWithParentIfMissing="true"
+
+        android:gravity="left"
+        android:textAppearance="@android:style/TextAppearance.Small"
+        android:textStyle="bold"
+
+        android:maxLines="1"
+        android:ellipsize="end" />
+
+      <TextView
+        android:id="@+id/time2"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_toRightOf="@id/user2"
+        android:layout_alignParentRight="true"
+
+        android:gravity="right"
+
+        style="@style/secondaryTextStyle"
+
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end" />
+
+      <TextView
+        android:id="@+id/location2"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_below="@id/user2"
+        android:layout_toRightOf="@id/photo2"
+        android:layout_alignParentBottom="true"
+        android:layout_alignWithParentIfMissing="true"
+
+        android:gravity="right"
+
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textColor="@android:color/black"
+
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end" />
+    </RelativeLayout>
+
+    <ImageButton
+      android:id="@+id/widgetFooter"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
-
-      android:layout_toRightOf="@id/photo0"
-      android:layout_alignTop="@id/photo0"
-      android:layout_alignParentRight="true"
-      android:layout_alignWithParentIfMissing="true"
-
-      android:gravity="center_vertical"
-      android:textAppearance="@android:style/TextAppearance.Small"
-      android:textStyle="bold"
-
-      android:maxLines="1"
-      android:ellipsize="end" />
-
-    <TextView
-      android:id="@+id/time0"
-
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-
-      android:layout_below="@id/checkinMessage0"
-      android:layout_alignParentRight="true"
       android:layout_alignParentBottom="true"
-      android:layout_alignWithParentIfMissing="true"
-
-      android:gravity="right"
-
-      style="@style/secondaryTextStyle"
-
-      android:maxLines="1"
-      android:scrollHorizontally="true"
-      android:ellipsize="end" />
-
-  </RelativeLayout>
+      android:background="@android:color/transparent"
+      android:src="@drawable/widget_footer" />
+  </LinearLayout>
 
   <RelativeLayout
-    android:id="@+id/widgetItem1"
     android:layout_width="fill_parent"
-    android:layout_height="50px"
-    android:layout_below="@id/widgetItem0"
-    android:visibility="gone"
-    style="@style/listItemStyle"
-    android:background="@drawable/blue_fade">
+    android:layout_height="fill_parent">
 
-    <ImageView
-      android:id="@+id/photo1"
-
-      android:layout_height="46px"
-      android:layout_width="46px"
-      android:padding="2px"
-      android:background="#186db5"
-      android:layout_alignParentTop="true"
-      android:layout_alignParentLeft="true"
-      android:layout_marginLeft="7dip"
-      android:layout_marginRight="8dip"
-      android:src="@drawable/blank_boy"
-
-      android:gravity="center_vertical"
-
-      android:scaleType="fitXY" />
-
-    <TextView
-      android:id="@+id/checkinMessage1"
-
+    <ImageButton
+      android:id="@+id/widgetHeader"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
-
-      android:layout_toRightOf="@id/photo1"
-      android:layout_alignTop="@id/photo1"
-      android:layout_alignParentRight="true"
-      android:layout_alignWithParentIfMissing="true"
-
-      android:gravity="center_vertical"
-      android:textAppearance="@android:style/TextAppearance.Small"
-      android:textStyle="bold"
-
-      android:maxLines="1"
-      android:ellipsize="end" />
-
-    <TextView
-      android:id="@+id/time1"
-
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-
-      android:layout_below="@id/checkinMessage1"
-      android:layout_alignParentRight="true"
-      android:layout_alignParentBottom="true"
-      android:layout_alignWithParentIfMissing="true"
-
-      android:gravity="right"
-
-      style="@style/secondaryTextStyle"
-
-      android:maxLines="1"
-      android:scrollHorizontally="true"
-      android:ellipsize="end" />
-
-  </RelativeLayout>
-
-  <RelativeLayout
-    android:id="@+id/widgetItem2"
-    android:layout_width="fill_parent"
-    android:layout_height="50px"
-    android:layout_below="@id/widgetItem1"
-    android:visibility="gone"
-    style="@style/listItemStyle"
-    android:paddingTop="1px"
-    android:background="@drawable/blue_fade">
-
-    <ImageView
-      android:id="@+id/photo2"
-
-      android:layout_height="46px"
-      android:layout_width="46px"
-      android:padding="2px"
-      android:background="#186db5"
       android:layout_alignParentTop="true"
-      android:layout_alignParentLeft="true"
-      android:layout_marginLeft="7dip"
-      android:layout_marginRight="8dip"
-      android:src="@drawable/blank_boy"
-
-      android:gravity="center_vertical"
-
-      android:scaleType="fitXY" />
-
-    <TextView
-      android:id="@+id/checkinMessage2"
-
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-
-      android:layout_toRightOf="@id/photo2"
-      android:layout_alignTop="@id/photo2"
-      android:layout_alignParentRight="true"
-      android:layout_alignWithParentIfMissing="true"
-
-      android:gravity="center_vertical"
-      android:textAppearance="@android:style/TextAppearance.Small"
-      android:textStyle="bold"
-
-      android:maxLines="1"
-      android:ellipsize="end" />
-
-    <TextView
-      android:id="@+id/time2"
-
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-
-      android:layout_below="@id/checkinMessage2"
-      android:layout_alignParentRight="true"
-      android:layout_alignParentBottom="true"
-      android:layout_alignWithParentIfMissing="true"
-
-      android:gravity="right"
-
-      style="@style/secondaryTextStyle"
-
-      android:maxLines="1"
-      android:scrollHorizontally="true"
-      android:ellipsize="end" />
-
+      android:background="@android:color/transparent"
+      android:src="@drawable/widget_header" />
   </RelativeLayout>
 
-  <ImageButton
-    android:id="@+id/widgetFooter"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
-    android:src="@drawable/widget_footer" />
-</LinearLayout>
+</FrameLayout>
