--- a/main/res/layout/friends_appwidget.xml
+++ b/main/res/layout/friends_appwidget.xml
@@ -259,6 +259,256 @@
         android:ellipsize="end" />
     </RelativeLayout>
 
+
+    <RelativeLayout
+      android:id="@+id/widgetItem3"
+      android:layout_width="fill_parent"
+      android:layout_height="50dip"
+      android:visibility="gone"
+      style="@style/listItemStyle"
+      android:paddingTop="1dip"
+      android:background="@drawable/blue_fade">
+
+      <ImageView
+        android:id="@+id/photo3"
+
+        android:layout_height="46dip"
+        android:layout_width="46dip"
+        android:padding="2dip"
+        android:background="#186db5"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="7dip"
+        android:layout_marginRight="8dip"
+        android:src="@drawable/blank_boy"
+
+        android:gravity="center_vertical"
+
+        android:scaleType="fitXY" />
+
+      <TextView
+        android:id="@+id/user3"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_toRightOf="@id/photo3"
+        android:layout_alignTop="@id/photo3"
+        android:layout_alignWithParentIfMissing="true"
+
+        android:gravity="left"
+        android:textAppearance="@android:style/TextAppearance.Small"
+        android:textStyle="bold"
+
+        android:maxLines="1"
+        android:ellipsize="end" />
+
+      <TextView
+        android:id="@+id/time3"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_toRightOf="@id/user3"
+        android:layout_alignParentRight="true"
+
+        android:gravity="right"
+
+        style="@style/secondaryTextStyle"
+
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end" />
+
+      <TextView
+        android:id="@+id/location3"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_below="@id/user3"
+        android:layout_toRightOf="@id/photo3"
+        android:layout_alignParentBottom="true"
+        android:layout_alignWithParentIfMissing="true"
+
+        android:gravity="right"
+
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textColor="@android:color/black"
+
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end" />
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+      android:id="@+id/widgetItem4"
+      android:layout_width="fill_parent"
+      android:layout_height="50dip"
+      android:visibility="gone"
+      style="@style/listItemStyle"
+      android:paddingTop="1dip"
+      android:background="@drawable/blue_fade">
+
+      <ImageView
+        android:id="@+id/photo4"
+
+        android:layout_height="46dip"
+        android:layout_width="46dip"
+        android:padding="2dip"
+        android:background="#186db5"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="7dip"
+        android:layout_marginRight="8dip"
+        android:src="@drawable/blank_boy"
+
+        android:gravity="center_vertical"
+
+        android:scaleType="fitXY" />
+
+      <TextView
+        android:id="@+id/user4"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_toRightOf="@id/photo4"
+        android:layout_alignTop="@id/photo4"
+        android:layout_alignWithParentIfMissing="true"
+
+        android:gravity="left"
+        android:textAppearance="@android:style/TextAppearance.Small"
+        android:textStyle="bold"
+
+        android:maxLines="1"
+        android:ellipsize="end" />
+
+      <TextView
+        android:id="@+id/time4"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_toRightOf="@id/user4"
+        android:layout_alignParentRight="true"
+
+        android:gravity="right"
+
+        style="@style/secondaryTextStyle"
+
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end" />
+
+      <TextView
+        android:id="@+id/location4"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_below="@id/user4"
+        android:layout_toRightOf="@id/photo4"
+        android:layout_alignParentBottom="true"
+        android:layout_alignWithParentIfMissing="true"
+
+        android:gravity="right"
+
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textColor="@android:color/black"
+
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end" />
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+      android:id="@+id/widgetItem5"
+      android:layout_width="fill_parent"
+      android:layout_height="50dip"
+      android:visibility="gone"
+      style="@style/listItemStyle"
+      android:paddingTop="1dip"
+      android:background="@drawable/blue_fade">
+
+      <ImageView
+        android:id="@+id/photo5"
+
+        android:layout_height="46dip"
+        android:layout_width="46dip"
+        android:padding="2dip"
+        android:background="#186db5"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="7dip"
+        android:layout_marginRight="8dip"
+        android:src="@drawable/blank_boy"
+
+        android:gravity="center_vertical"
+
+        android:scaleType="fitXY" />
+
+      <TextView
+        android:id="@+id/user5"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_toRightOf="@id/photo5"
+        android:layout_alignTop="@id/photo5"
+        android:layout_alignWithParentIfMissing="true"
+
+        android:gravity="left"
+        android:textAppearance="@android:style/TextAppearance.Small"
+        android:textStyle="bold"
+
+        android:maxLines="1"
+        android:ellipsize="end" />
+
+      <TextView
+        android:id="@+id/time5"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_toRightOf="@id/user5"
+        android:layout_alignParentRight="true"
+
+        android:gravity="right"
+
+        style="@style/secondaryTextStyle"
+
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end" />
+
+      <TextView
+        android:id="@+id/location5"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_below="@id/user5"
+        android:layout_toRightOf="@id/photo5"
+        android:layout_alignParentBottom="true"
+        android:layout_alignWithParentIfMissing="true"
+
+        android:gravity="right"
+
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textColor="@android:color/black"
+
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end" />
+
+    </RelativeLayout>
+
+
     <ImageButton
       android:id="@+id/widgetFooter"
       android:layout_width="fill_parent"
