--- a/main/res/layout/mayor.xml
+++ b/main/res/layout/mayor.xml
@@ -6,32 +6,18 @@
   android:layout_width="fill_parent"
   android:layout_height="?android:attr/listPreferredItemHeight"
   android:paddingBottom="10dip"
-  android:visibility="invisible">
-
-  <TextView
-    android:id="@+id/mayorHeader"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="3dip"
-
-    android:text="@string/mayor_header"
-
-    android:layout_alignParentRight="true"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentTop="true"
-
-    style="@style/listSeparatorTextViewStyle" />
+  android:paddingRight="10dip"
+  style="@style/listItemStyle">
 
   <ImageView
-    android:id="@+id/mayorPhoto"
+    android:id="@+id/photo"
 
-    android:layout_below="@id/mayorHeader"
-    android:layout_alignParentLeft="true"
-
-    android:layout_height="46px"
-    android:layout_width="46px"
-    android:padding="2px"
+  android:layout_height="46px"
+  android:layout_width="46px"
+  android:padding="2px"
     android:background="#186db5"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentLeft="true"
     android:layout_marginLeft="7dip"
     android:layout_marginTop="5.5dip"
     android:layout_marginRight="8.5dip"
@@ -43,34 +29,32 @@
     android:scaleType="fitXY" />
 
   <TextView
-    android:id="@+id/mayorName"
+    android:id="@+id/firstLine"
 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
 
-    android:paddingRight="10dip"
-
-    android:layout_below="@id/mayorHeader"
-    android:layout_toRightOf="@id/mayorPhoto"
+    android:layout_toRightOf="@id/photo"
+    android:layout_alignTop="@id/photo"
     android:layout_alignParentRight="true"
     android:layout_alignWithParentIfMissing="true"
 
     android:gravity="center_vertical"
-    android:textAppearance="@android:style/TextAppearance.Medium"
+    android:textAppearance="@android:style/TextAppearance.Small"
+    android:textStyle="bold"
 
     android:maxLines="1"
     android:ellipsize="end" />
 
   <TextView
-    android:id="@+id/mayorCheckinCount"
+    android:id="@+id/timeTextView"
 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
 
-    android:paddingRight="10dip"
-
-    android:layout_below="@id/mayorName"
+    android:layout_below="@id/firstLine"
     android:layout_alignParentRight="true"
+    android:layout_alignParentBottom="true"
     android:layout_alignWithParentIfMissing="true"
 
     android:gravity="right|bottom"
@@ -79,6 +63,28 @@
 
     android:maxLines="1"
     android:scrollHorizontally="true"
+    android:ellipsize="end" />
+
+<!-- android:textStyle="italic" -->
+
+  <TextView
+    android:id="@+id/shoutTextView"
+
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+
+    android:layout_toRightOf="@id/photo"
+    android:layout_toLeftOf="@id/timeTextView"
+    android:layout_below="@id/firstLine"
+    android:layout_alignParentBottom="true"
+
+    android:paddingRight="3dip"
+
+    android:gravity="left"
+    android:textAppearance="@android:style/TextAppearance.Small"
+
+
+    android:maxLines="2"
     android:ellipsize="end" />
 
 </RelativeLayout>
