Update issue 130 Small screen support. jessev's patch in issue 130

--- a/main/res/drawable/widget_footer.xml
+++ b/main/res/drawable/widget_footer.xml
@@ -4,8 +4,8 @@
   android:shape="rectangle">
 
   <corners
-    android:topRightRadius="0.00001px"
-    android:topLeftRadius="0.00001px"
+    android:topRightRadius="0.00001dip"
+    android:topLeftRadius="0.00001dip"
     android:bottomRightRadius="8dip"
     android:bottomLeftRadius="8dip" />
 
