--- a/main/res/layout-land/login_activity.xml
+++ b/main/res/layout-land/login_activity.xml
@@ -31,7 +31,7 @@
       <TableRow>
         <EditText
           android:id="@+id/phoneEditText"
-          android:layout_width="0px"
+          android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:inputType="text"
@@ -39,7 +39,7 @@
           android:hint="@string/phone_number_or_email" />
         <EditText
           android:id="@+id/passwordEditText"
-          android:layout_width="0px"
+          android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:password="true"
