--- a/main/res/layout-land/user_activity.xml
+++ b/main/res/layout-land/user_activity.xml
@@ -20,8 +20,8 @@
     <ImageView
       android:id="@+id/photo"
 
-      android:layout_width="50px"
-      android:layout_height="50px"
+      android:layout_width="50dip"
+      android:layout_height="50dip"
 
       android:layout_alignParentTop="true"
       android:layout_alignParentLeft="true"
