Feedback item for option menues. Will allow user to send feedback from the app with prepopulated template  -- user: avolovoy@gmail.com branch 'default' added main/res/drawable/line.xml added main/res/values/colors.xml added main/src/com/joelapenna/foursquared/util/MenuUtils.java changed main/default.properties changed main/res/drawable/foursquare_gradient.xml changed main/res/values/strings.xml changed main/src/com/joelapenna/foursquared/Foursquared.java changed main/src/com/joelapenna/foursquared/FriendsActivity.java changed main/src/com/joelapenna/foursquared/NearbyVenuesActivity.java changed main/src/com/joelapenna/foursquared/SearchVenuesActivity.java changed main/src/com/joelapenna/foursquared/VenueActivity.java

--- a/main/res/drawable/foursquare_gradient.xml
+++ b/main/res/drawable/foursquare_gradient.xml
@@ -3,7 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:shape="rectangle">
   <gradient
-    android:startColor="#176CB5"
-    android:endColor="#74CBE7"
+    android:startColor="@color/blue_start"
+    android:endColor="@color/blue_end"
     android:angle="90" />
 </shape>
