Scale the foursquare logo so that it doesn't underlap the login plaque.

--- a/main/res/layout-land/login_activity.xml
+++ b/main/res/layout-land/login_activity.xml
@@ -12,8 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/loginPlaque"
+        android:scaleType="centerInside"
         android:src="@drawable/main_logo" />
     <LinearLayout
+        android:id="@+id/loginPlaque"
         android:orientation="vertical"
         android:layout_width="250dip"
         android:layout_height="wrap_content"
