--- a/main/res/layout/checkin_result_dialog.xml
+++ b/main/res/layout/checkin_result_dialog.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/layout_root"
-    android:layout_height="fill_parent"
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/layout_root"
+  android:orientation="vertical"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent"
+  android:padding="10dp">
+
+  <TextView
+    android:id="@+id/messageTextView"
     android:layout_width="fill_parent"
-    android:orientation="vertical"
-    android:background="@color/white"
->
-    <include
-        layout="@layout/dialog_title" />
-    <TextView
-        android:id="@+id/messageTextView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="5dip"
-        android:text="Your check-in score"
-        android:textStyle="bold"
-        android:textAppearance="@android:style/TextAppearance.Medium" 
-        android:background="@drawable/purple_gradient"
-        />
-    <WebView
-        android:id="@+id/scoring"
-        android:layout_width="fill_parent"
-        android:layout_height="100dip" />
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="6dip"
+
+    android:textAppearance="@android:style/TextAppearance.Medium" />
+
+  <WebView
+    android:id="@+id/webView"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" />
 </LinearLayout>
