More changes for checkin fixup. Long TODO Cleanup layouts Activities : Shout - CheckinResult integration and report checkin to parent activity Images and gradients  - black gradient is IMO a fail and need better image. onClick listners for checkin result items ( if needed ) Mayorship section needs a rework( user image, crown, layout placement )

--- a/main/res/drawable/black_gradient.xml
+++ b/main/res/drawable/black_gradient.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle"
     >
     <gradient
-        android:startColor="@color/purple_start"
-        android:endColor="@color/purple_end"
+        android:startColor="@color/black_start"
+        android:endColor="@color/black_end"
         android:angle="270" />
 </shape>
