--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -25,7 +25,7 @@
     <color
         name="item_grey_end">#62707C</color>
      <color
-        name="black_start">#1E1E1E</color>
+        name="black_start">#1A1A1A</color>
     <color
-        name="black_end">#121212</color>
+        name="black_end">#181818</color>
 </resources>
