--- a/main/res/layout/checkin_result_dialog.xml
+++ b/main/res/layout/checkin_result_dialog.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_root"
     android:layout_height="fill_parent"
@@ -8,34 +8,103 @@
     android:background="@color/white"
 >
     <include
-        layout="@layout/dialog_title" />
-     <TextView
+        layout="@layout/dialog_title"
+        android:id="@+id/title" /> 
+    <TextView
         android:id="@+id/score_message"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="5dip"
+        android:layout_below="@id/title"
+        android:padding="5dip"
         android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textColor="@color/black_end"
         android:background="@drawable/lgrey_gradient" />
+    <RelativeLayout
+        android:id="@+id/mayor"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_below="@id/score_message"
+        android:background="@drawable/black_gradient"
+        android:visibility="gone"
+    >
+        <ImageView
+            android:id="@+id/crown"
+            android:layout_height="40dip"
+            android:layout_width="40dip"
+            android:layout_margin="5dip"
+            android:gravity="center"
+            android:scaleType="fitCenter"
+            android:src="@drawable/crown" />
+        <TextView
+            android:id="@+id/mayor_message"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/crown"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:paddingLeft="5dip"
+            android:paddingRight="5dip"
+            android:textAppearance="@style/TextStyleWhite" />
+    </RelativeLayout>
     <TextView
-        android:id="@+id/messageTextView"
+        android:id="@+id/scoring_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/mayor"
         android:paddingLeft="5dip"
         android:text="@string/checkin_score"
         android:textStyle="bold"
         android:textAppearance="@android:style/TextAppearance.Medium"
         android:background="@drawable/purple_gradient" />
-    <LinearLayout
-        android:id="@+id/checkin_result"
-        android:layout_height="fill_parent"
+    <ListView
+        android:id="@+id/badges"
+        android:layout_below="@id/scoring_title"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+    <ListView
+        android:id="@+id/scoring"
+        android:layout_below="@id/badges"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:id="@+id/footer"
+        android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:orientation="vertical"
-        android:layout_weight="1"
+        android:layout_below="@id/scoring"
+        android:background="@drawable/black_gradient"
     >
-        <ListView
-            android:id="@+id/scoring"
+        <TextView
+            android:id="@+id/totals"
             android:layout_width="fill_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1" />
-    </LinearLayout>
-</LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
+            android:layout_marginBottom="10dip"
+            android:gravity="center"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:paddingLeft="10dip"
+            android:paddingRight="10dip"
+            android:textAppearance="@style/TextStyleWhite" />
+        <TextView
+            android:id="@+id/specials_title"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/totals"
+            android:gravity="center"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:paddingLeft="5dip"
+            android:paddingRight="5dip"
+            android:text="Specials:"
+            android:textAppearance="@style/TextStyleWhite"
+            android:visibility="gone" />
+        <ListView
+            android:id="@+id/specials"
+            android:layout_below="@id/specials_title"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+    </RelativeLayout>
+</RelativeLayout>
