--- a/main/res/layout/score_list_item.xml
+++ b/main/res/layout/score_list_item.xml
@@ -9,27 +9,32 @@
 >
     <ImageView
         android:id="@+id/scoreIcon"
-        android:layout_width="50dip"
-        android:layout_height="50dip"
-        android:layout_marginLeft="5dip"
-        android:layout_marginRight="5dip"
+        android:layout_width="40dip"
+        android:layout_height="40dip"
+        android:layout_margin="5dip"
+        android:scaleType="center"
         android:layout_gravity="center_vertical" />
     <TextView
         android:id="@+id/scoreDesc"
+        android:layout_marginLeft="10dip"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="@android:style/TextAppearance.Medium"
-        android:layout_weight="1" 
-        android:layout_gravity="center_vertical"/>
+        android:textColor="@color/black_end"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical" />
     <TextView
         android:id="@+id/scoreNum"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:layout_alignParentRight="true"
-        android:paddingRight="20dip"
-        android:paddingLeft="20dip"
+        android:layout_marginLeft="2dip"
         android:gravity="center"
         android:textSize="22sp"
+        android:textStyle="bold"
+        android:paddingLeft="10dip"
+        android:paddingRight="10dip"
         android:textAppearance="@style/TextStyleWhite"
         android:background="@drawable/dgrey_gradient" />
 </LinearLayout>
