--- a/main/res/layout/score_list_item.xml
+++ b/main/res/layout/score_list_item.xml
@@ -9,17 +9,16 @@
 >
     <ImageView
         android:id="@+id/scoreIcon"
-        android:layout_width="40dip"
-        android:layout_height="40dip"
+        android:layout_width="36dip"
+        android:layout_height="36dip"
         android:layout_margin="5dip"
-        android:scaleType="center"
         android:layout_gravity="center_vertical" />
     <TextView
         android:id="@+id/scoreDesc"
         android:layout_marginLeft="10dip"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textAppearance="@android:style/TextAppearance.Small"
         android:textColor="@color/black_end"
         android:singleLine="true"
         android:ellipsize="marquee"
@@ -31,7 +30,7 @@
         android:layout_height="fill_parent"
         android:layout_marginLeft="2dip"
         android:gravity="center"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:paddingLeft="10dip"
         android:paddingRight="10dip"
