--- a/main/res/layout/special_list_item.xml
+++ b/main/res/layout/special_list_item.xml
@@ -5,8 +5,8 @@
     android:id="@+id/message"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:padding="10dip"
-    android:textAppearance="@android:style/TextAppearance.Medium"
-    android:singleLine="true"
+    android:padding="5dip"
+    android:textColor="@color/black_end"
+    android:textAppearance="@android:style/TextAppearance.Small"
     android:ellipsize="marquee"
-    android:background="@drawable/black_gradient" />
+    android:background="@drawable/item_grey_gradient" />
