Ignoring config changes in manifest and shout Changed layouts to white/blue ( till oveall design change )

--- a/main/res/layout/special_list_item.xml
+++ b/main/res/layout/special_list_item.xml
@@ -8,5 +8,4 @@
     android:padding="5dip"
     android:textColor="@color/black_end"
     android:textAppearance="@android:style/TextAppearance.Small"
-    android:ellipsize="marquee"
-    android:background="@drawable/item_grey_gradient" />
+    android:ellipsize="marquee" />
