--- a/main/res/layout/badge_list_item.xml
+++ b/main/res/layout/badge_list_item.xml
@@ -5,15 +5,13 @@
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:orientation="horizontal"
-    android:background="@drawable/item_grey_gradient"
-    android:layout_gravity="center_vertical"
 >
     <ImageView
         android:id="@+id/icon"
         android:layout_width="36dip"
         android:layout_height="36dip"
         android:layout_margin="5dip"
-       
+        android:gravity="center_vertical"
         android:src="@drawable/default_off" />
     <TextView
         android:id="@+id/name"
@@ -22,5 +20,6 @@
         android:textColor="@color/black_end"
         android:textStyle="bold"
         android:singleLine="true"
-        android:ellipsize="marquee" />
+        android:ellipsize="marquee"
+        android:layout_gravity="center_vertical" />
 </LinearLayout>
