--- a/main/res/layout/checkin_result_dialog.xml
+++ b/main/res/layout/checkin_result_dialog.xml
@@ -12,13 +12,13 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="5dip"
-        android:textAppearance="@android:style/TextAppearance.Medium"
-        android:textColor="@color/black_end"
-        android:background="@drawable/lgrey_gradient" />
+        android:textAppearance="@android:style/TextAppearance.Small"
+        android:textColor="@color/black_end" />
     <ListView
         android:id="@+id/result_list"
         android:layout_width="fill_parent"
         android:layout_height="0dip"
+        android:cacheColorHint="#00000000"
         android:layout_weight="0.5" />
     <RelativeLayout
         android:id="@+id/footer"
